--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,1 @@
-spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://localhost:3306/dbexa
-spring.datasource.username=root
-spring.datasource.password=admin
-spring.datasource.initialization-mode=always
-
+spring.profiles.active=container
