--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ script: mvn clean package -DskipTests=true -Dspring.profiles.active=local
 
 before_install:
   - chmod +x mvnw
-  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USER" --password-stdin
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   - docker pull openjdk:8-jdk-alpine
 
 after_success:
