Added new pages and some bug fix

--- a/front/.eslintrc.json
+++ b/front/.eslintrc.json
@@ -23,6 +23,8 @@
     ],
     "rules": {
         "linebreak-style":"off",
-        "no-named-as-default":"off"
+        "no-named-as-default":"off",
+        "semi":"off",
+        "prop-types":"off",
     }
 }
